Bug 1230491 - add CSSStyleSheet::parsingMode; r=heycam,bz