layout/style/CSSStyleSheet.h
@@ -13,6 +13,7 @@
 #include "mozilla/IncrementalClearCOMRuleArray.h"
 #include "mozilla/MemoryReporting.h"
 #include "mozilla/dom/Element.h"
+#include "mozilla/dom/CSSStyleSheetBinding.h"
 
 #include "nscore.h"
 #include "nsCOMPtr.h"
@@ -49,7 +50,36 @@ namespace dom {
 class CSSRuleList;
 } // namespace dom
 
-// -------------------------------
+namespace css {
+/**
+ * Enum defining the mode in which a sheet is to be parsed.  This is
+ * usually, but not always, the same as the cascade level at which the
+ * sheet will apply (see nsStyleSet.h).  Most of the Loader APIs only
+ * support loading of author sheets.
+ *
+ * Author sheets are the normal case: styles embedded in or linked
+ * from HTML pages.  They are also the most restricted.
+ *
+ * User sheets can do anything author sheets can do, and also get
+ * access to a few CSS extensions that are not yet suitable for
+ * exposure on the public Web, but are very useful for expressing
+ * user style overrides, such as @-moz-document rules.
+ *
+ * Agent sheets have access to all author- and user-sheet features
+ * plus more extensions that are necessary for internal use but,
+ * again, not yet suitable for exposure on the public Web.  Some of
+ * these are outright unsafe to expose; in particular, incorrect
+ * styling of anonymous box pseudo-elements can violate layout
+ * invariants.
+ */
+enum SheetParsingMode {
+  eAuthorSheetFeatures = 0,
+  eUserSheetFeatures,
+  eAgentSheetFeatures
+};
+}
+
+  // -------------------------------
 // CSS Style Sheet Inner Data Container
 //
 
@@ -337,6 +367,12 @@ public:
   void WillDirty();
   void DidDirty();
 
+  mozilla::dom::CSSStyleSheetParsingMode ParsingMode();
+
+  void SetParsingMode(css::SheetParsingMode aParsingMode) {
+    mParsingMode = aParsingMode;
+  }
+
 private:
   CSSStyleSheet(const CSSStyleSheet& aCopy,
                 CSSStyleSheet* aParentToUse,
@@ -385,6 +421,7 @@ protected:
   bool                  mDisabled;
   bool                  mDirty; // has been modified 
   bool                  mInRuleProcessorCache;
+  css::SheetParsingMode mParsingMode;
   RefPtr<dom::Element> mScopeElement;
 
   CSSStyleSheetInner*   mInner;
